# nanochat-jax

./: .env.example  .gitignore  .ruff.toml  COMPARISON.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  scaling_experiment.yml
configs/: base.yaml
configs/experiment/: scaling_c.yaml  scaling_d.yaml  scaling_n.yaml
configs/model/: large.yaml  medium.yaml  nano.yaml  small.yaml  xlarge.yaml
configs/training/: chinchilla.yaml  default.yaml  overfit_single.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: architecture.html
docs/i18n/: README_de.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md
docs/research/: ARXIV_PAPER.md  BLOG_POST.md  FULL_ANALYSIS.md  FULL_ANALYSIS_PART2.md  LINKEDIN_POST.md  MAINTAINER_COMMUNICATION.md
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json
scripts/: benchmark_parity.py  chat.py  chat_web.py  evaluate.py  preprocess.py  preprocess_shakespeare.py  real_scaling_sweep.py  rl_train.py  run_scaling.py  scaling_sweep.py  serve.py  sft.py  tok_train.py  train.py  verify_all_gaps.py
tests/: conftest.py
tests/integration/: test_inference.py  test_overfit.py  test_train_step.py
tests/scaling/: test_power_law_fit.py
tests/unit/: test_attention.py  test_attention_features.py  test_auto_scale.py  test_checkpoint.py  test_config.py  test_dataset.py  test_dataset_registry.py  test_distributed.py  test_embeddings.py  test_eval_suite.py  test_feedforward.py  test_flash_attention.py  test_fp8.py  test_grpo.py  test_kv_cache.py  test_lm_eval_adapter.py  test_loss.py  test_muon.py  test_norms.py  test_optimizer.py  test_packing.py  test_param_count.py  test_preprocessing.py  test_report_generator.py  test_runner.py  test_sampling.py  test_scheduler.py  test_server.py  test_sft.py  test_token_mixing.py  test_tools.py  test_transformer.py  test_value_embeddings.py
(+55 files in other folders)
