[build-system]
requires = ["setuptools>=69.0", "wheel"]
#build-backend = "setuptools.backends._legacy:_Backend"
build-backend = "setuptools.build_meta"

[project]
name = "nanochat-jax"
version = "0.1.0"
description = "Enterprise-grade GPT replica in JAX/Flax NNX with scaling law experiments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "NanoChat-JAX Team"}]

dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "flax>=0.12.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.9.0",
    "tiktoken>=0.7.0",
    "datasets>=2.20.0",
    "numpy>=1.26.0",
    "h5py>=3.11.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.8.0",
    "structlog>=24.4.0",
    "wandb>=0.17.0",
    "tensorboard>=2.17.0",
    "prometheus-client>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "rich>=13.7.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
]
gpu = [
    "jax[cuda12]>=0.4.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "ARG", "PTH", "ERA"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nanochat"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/nanochat --cov-report=term-missing -x -v"
markers = ["slow: marks tests as slow"]
